# groundtruthConvert

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.tdat
groundtruth/: CMakeLists.txt  Grid3D.cpp  Grid3D.h  Grid3D.h.orig  converter.cpp  converter.cpp.orig  converter.h  converter.h.orig  main.cpp  main.cpp.orig
groundtruthConvert/: CMakeLists.txt  Grid3D.h  converter.cpp  converter.h  main.cpp
src/: CMakeLists.txt  Grid3D.cpp  Grid3D.h  converter.cpp  converter.h  main.cpp
